--- a/package.json
+++ b/package.json
@@ -10,29 +10,33 @@
     },
     "main": "./src/index.ts",
     "scripts": {
-        "preinstall": "npm install --package-lock-only --ignore-scripts --no-audit && npx npm-force-resolutions@0.0.3",
-        "check": "eslint . --ext .ts --fix",
+        "preinstall": "npm install --package-lock-only --ignore-scripts --no-audit && npx --yes npm-force-resolutions@0.0.3",
         "link": "npm link /home/root/project/jsmvcfw/root/",
         "sass": "sass --watch ./src/style/main.scss ./public/css/main.css",
-        "execute": "webpack serve --config webpack.execute.js",
-        "build": "webpack --config webpack.build.js"
+        "check": "eslint . --fix",
+        "execute": "npm run check && webpack serve --config webpack.execute.js",
+        "build": "npm run check && webpack --config webpack.build.js"
     },
     "dependencies": {},
     "devDependencies": {
         "typescript": "4.9.4",
-        "eslint": "8.35.0",
-        "sass": "1.57.1",
-        "dotenv": "16.0.3",
-        "ts-loader": "9.4.2",
-        "webpack": "5.75.0",
+        "webpack": "5.79.0",
         "webpack-cli": "5.0.1",
         "webpack-dev-server": "4.11.1",
         "clean-webpack-plugin": "4.0.0",
         "compression-webpack-plugin": "10.0.0",
         "copy-webpack-plugin": "11.0.0",
         "html-webpack-plugin": "5.5.0",
-        "@typescript-eslint/eslint-plugin": "5.54.0",
-        "@typescript-eslint/parser": "5.54.0"
+        "ts-loader": "9.4.2",
+        "dotenv": "16.0.3",
+        "sass": "1.57.1",
+        "eslint": "8.35.0",
+        "prettier": "2.8.7",
+        "eslint-plugin-prettier": "4.2.1",
+        "eslint-config-prettier": "8.8.0",
+        "@types/node": "18.14.4",
+        "@typescript-eslint/parser": "5.54.0",
+        "@typescript-eslint/eslint-plugin": "5.54.0"
     },
     "resolutions": {
         "node-fetch": "2.6.7",
