--- a/env/local.env
+++ b/env/local.env
@@ -4,4 +4,4 @@ DOMAIN='localhost'
 JSMVCFW_APP_NODE_ENV='development'
 JSMVCFW_APP_DEBUG='true'
 JSMVCFW_APP_PUBLIC_PATH='/'
-JSMVCFW_APP_PORT_HTTPS='30000'
+JSMVCFW_APP_SERVER_PORT='30000'
