--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "main": "./src/index.ts",
     "scripts": {
         "preinstall": "npm install --package-lock-only --ignore-scripts --no-audit && npx --yes npm-force-resolutions@0.0.3",
-        "link": "npm link /home/root/project/jsmvcfw/root/",
         "sass": "sass --watch ./src/style/main.scss ./public/css/main.css",
         "check": "eslint . --fix",
+        "link": "npm link /home/root/project/jsmvcfw/root/",
         "execute": "npm run check && webpack serve --config webpack.execute.js",
         "build": "npm run check && webpack --config webpack.build.js"
     },
     "dependencies": {},
     "devDependencies": {
+        "@types/node": "18.14.4",
+        "@typescript-eslint/parser": "5.54.0",
+        "@typescript-eslint/eslint-plugin": "5.54.0",
+        "eslint": "8.35.0",
+        "eslint-plugin-prettier": "4.2.1",
+        "eslint-config-prettier": "8.8.0",
+        "prettier": "2.8.7",
         "typescript": "4.9.4",
         "webpack": "5.79.0",
         "webpack-cli": "5.0.1",
@@ -29,14 +36,7 @@
         "html-webpack-plugin": "5.5.0",
         "ts-loader": "9.4.2",
         "dotenv": "16.0.3",
-        "sass": "1.57.1",
-        "eslint": "8.35.0",
-        "prettier": "2.8.7",
-        "eslint-plugin-prettier": "4.2.1",
-        "eslint-config-prettier": "8.8.0",
-        "@types/node": "18.14.4",
-        "@typescript-eslint/parser": "5.54.0",
-        "@typescript-eslint/eslint-plugin": "5.54.0"
+        "sass": "1.57.1"
     },
     "resolutions": {
         "node-fetch": "2.6.7",
