--- a/env/local.env
+++ b/env/local.env
@@ -1,7 +1,9 @@
 ENV_NAME='local'
 DOMAIN='localhost'
+TIMEZONE='Asia/Tokyo'
 
-JSMVCFW_APP_NODE_ENV='development'
+JSMVCFW_APP_NAME='JsMvcFw app'
+JSMVCFW_APP_LABEL='jsmvcfw'
 JSMVCFW_APP_DEBUG='true'
-JSMVCFW_APP_PUBLIC_PATH='/'
-JSMVCFW_APP_SERVER_PORT='30000'
+JSMVCFW_APP_NODE_ENV='development'
+JSMVCFW_APP_URL_ROOT=''
